--- a/Bc2JpsiMuNu_RapidSim_LHCb.ipynb
+++ b/Bc2JpsiMuNu_RapidSim_LHCb.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "toc_visible": true,
       "mount_file_id": "1JKfxh_I6zFWYr8Z0eQ0Pqreyrj6Ix50Z",
-      "authorship_tag": "ABX9TyPh5bNvIX+4TrKo+PvCj0gW",
+      "authorship_tag": "ABX9TyOcH+2ukh/55NsJG73wvc2R",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,7 +42,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 326,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -90,7 +90,7 @@
       "metadata": {
         "id": "6P_RGNqhPWel"
       },
-      "execution_count": 327,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -111,7 +111,7 @@
         "id": "fAxK2rtTPc6b",
         "outputId": "5de0382a-a60e-4d20-dfdc-0036772046d7"
       },
-      "execution_count": 328,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -141,7 +141,7 @@
       "metadata": {
         "id": "HEyQwJ9ZPkSy"
       },
-      "execution_count": 329,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -157,7 +157,7 @@
         "id": "WxNHO0OWPq1E",
         "outputId": "9ed95a57-7b2b-49df-fcb7-48925fabb386"
       },
-      "execution_count": 330,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -270,7 +270,7 @@
       "metadata": {
         "id": "ltycP1BLP4dC"
       },
-      "execution_count": 331,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -283,7 +283,7 @@
       "metadata": {
         "id": "u1XxfBWERld2"
       },
-      "execution_count": 332,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -300,7 +300,7 @@
         "id": "jJHh6qLLR2NZ",
         "outputId": "98ce5d8c-3b17-454c-d445-40cde7bcfc1c"
       },
-      "execution_count": 333,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -408,7 +408,7 @@
       "metadata": {
         "id": "irjpdU1dR6EH"
       },
-      "execution_count": 334,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -421,7 +421,7 @@
       "metadata": {
         "id": "Lwkd9E6YSXhA"
       },
-      "execution_count": 335,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -438,7 +438,7 @@
         "id": "EsRsHqncSb97",
         "outputId": "c5d7fe3b-fb66-43b0-fed2-da4968c2d82d"
       },
-      "execution_count": 336,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -564,7 +564,7 @@
       "metadata": {
         "id": "YTR2rn0USfZD"
       },
-      "execution_count": 337,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -576,7 +576,7 @@
       "metadata": {
         "id": "s7cbAOzkYLde"
       },
-      "execution_count": 338,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -593,7 +593,7 @@
         "id": "KGfErHrZYRHR",
         "outputId": "97e03e49-e678-4990-e9e8-855b446c8a0d"
       },
-      "execution_count": 339,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -664,7 +664,7 @@
       "metadata": {
         "id": "f8BEarhSYUzY"
       },
-      "execution_count": 340,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -676,7 +676,7 @@
       "metadata": {
         "id": "rRc-menpYmwR"
       },
-      "execution_count": 341,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -693,7 +693,7 @@
         "id": "hYMlM3kuYr_F",
         "outputId": "71b5bcdf-145d-4120-e3a8-14bf4a0efdf6"
       },
-      "execution_count": 342,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -743,7 +743,7 @@
       "metadata": {
         "id": "94fgw6cvYu6i"
       },
-      "execution_count": 343,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -762,7 +762,7 @@
         "id": "QyyTGZ6ZZsQ1",
         "outputId": "b5afca1c-64b4-4b69-b682-bcfe5aaf8494"
       },
-      "execution_count": 344,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -812,7 +812,7 @@
       "metadata": {
         "id": "macXLGNBl5rU"
       },
-      "execution_count": 345,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -820,7 +820,7 @@
       "source": [
         "Here, we use `_reco` to differentiate our new estimated $B_c^+$ z-momentum from the measured z-momentum which has `_RECO` in the name. The measured z-momentum is simply the z-momentum of the $J/\\psi \\mu^+$ system.\n",
         "\n",
-        "The next thing we can do is estimate the total $B_c^+$ momentum from our $p(B_c^+)_z$ estimate. To do this, we exploit the relation $|p(B_c^+)| = p(B_c^+)_z \\times \\sqrt{1 + tan({\\alpha})}$. Here, $\\alpha$ is the angle between the z-axis and the flight direction of our $B_c^+$. We can determine the flight direction of the $B_c^+$ using two points in 3D space:\n",
+        "The next thing we can do is estimate the total $B_c^+$ momentum from our $p(B_c^+)_z$ estimate. To do this, we exploit the relation $|p(B_c^+)| = p(B_c^+)_z \\times \\sqrt{1 + tan^2({\\alpha})}$. Here, $\\alpha$ is the angle between the z-axis and the flight direction of our $B_c^+$. We can determine the flight direction of the $B_c^+$ using two points in 3D space:\n",
         " - The primary vertex (PV), which is the point where the proton-proton collision occurs. This is where the $B_c^+$ is initially created. \n",
         " - The decay vertex (DV), which is the point where the $B_c^+$ decays to a $J/\\psi$, a muon, and a neutrino. The $J/\\psi$ also immediately decays to two muons, so we have a well-measured point in space where three muons originate. This enables the LHCb detector to reconsruct the DV.\n",
         "\n",
@@ -890,7 +890,7 @@
       "metadata": {
         "id": "M8XhzbGOocqU"
       },
-      "execution_count": 346,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -902,7 +902,7 @@
       "metadata": {
         "id": "dPuWooBTqsSE"
       },
-      "execution_count": 347,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -914,7 +914,7 @@
       "metadata": {
         "id": "SK-FHhjiqytD"
       },
-      "execution_count": 348,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -939,7 +939,7 @@
       "metadata": {
         "id": "lIw6xWJUq1vf"
       },
-      "execution_count": 349,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -959,7 +959,7 @@
       "metadata": {
         "id": "5RR_jt9csT0w"
       },
-      "execution_count": 350,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -982,7 +982,7 @@
       "metadata": {
         "id": "Kvnz1aazuCSB"
       },
-      "execution_count": 351,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1004,7 +1004,7 @@
         "id": "zjkNsir3ug2B",
         "outputId": "cbf40c43-076c-46a2-c18f-0cdae5506212"
       },
-      "execution_count": 352,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1039,7 +1039,7 @@
       "metadata": {
         "id": "F20RnN-uwDIp"
       },
-      "execution_count": 353,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1056,7 +1056,7 @@
         "id": "hBTGShDLwLWw",
         "outputId": "5462245e-0cad-4a95-fcce-ce78ed58de62"
       },
-      "execution_count": 354,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1090,7 +1090,7 @@
       "metadata": {
         "id": "m9ascM6HwPvf"
       },
-      "execution_count": 355,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1112,7 +1112,7 @@
         "id": "Z4BocCShwnKa",
         "outputId": "88ccef59-671d-43e3-e094-081469793a0f"
       },
-      "execution_count": 356,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1136,7 +1136,7 @@
       "metadata": {
         "id": "R-h7feA8w85N"
       },
-      "execution_count": 357,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1153,7 +1153,7 @@
         "id": "H0i3A-QJxDMY",
         "outputId": "fdda5fe2-9af0-4755-c4b6-91ca4e498d65"
       },
-      "execution_count": 358,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1177,7 +1177,7 @@
       "metadata": {
         "id": "VpNp5Z8iwryx"
       },
-      "execution_count": 359,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1199,7 +1199,7 @@
         "id": "SrfRk81WwzP2",
         "outputId": "c95a60ed-8adf-4b5d-d170-3d29c09d6ae8"
       },
-      "execution_count": 360,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1223,7 +1223,7 @@
       "metadata": {
         "id": "-6AY1-0vw4jg"
       },
-      "execution_count": 361,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1240,7 +1240,7 @@
         "id": "l3VDb6sxxMYz",
         "outputId": "708cc35b-f4f6-4f06-9fba-381fd8f457f9"
       },
-      "execution_count": 362,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1264,7 +1264,7 @@
       "metadata": {
         "id": "ONP0In1Tyikg"
       },
-      "execution_count": 363,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1286,7 +1286,7 @@
         "id": "tpasocy0yleQ",
         "outputId": "687a4c50-31d3-40c7-f071-c6a376c4c45a"
       },
-      "execution_count": 364,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1310,7 +1310,7 @@
       "metadata": {
         "id": "03xuLaLU2mcp"
       },
-      "execution_count": 365,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1327,7 +1327,7 @@
         "id": "ZXRm6e8w3LQU",
         "outputId": "8af0ee91-ac24-4126-b555-28b9a2109d6e"
       },
-      "execution_count": 366,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
