--- a/Bc2JpsiMuNu_RapidSim_LHCb.ipynb
+++ b/Bc2JpsiMuNu_RapidSim_LHCb.ipynb
@@ -5,9 +5,8 @@
     "colab": {
       "name": "Bc2JpsiMuNu_RapidSim_LHCb.ipynb",
       "provenance": [],
-      "toc_visible": true,
       "mount_file_id": "1JKfxh_I6zFWYr8Z0eQ0Pqreyrj6Ix50Z",
-      "authorship_tag": "ABX9TyOcH+2ukh/55NsJG73wvc2R",
+      "authorship_tag": "ABX9TyNh688MSl+jXOWzo20mxDCu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,29 +41,37 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "irCpH9UbOVze",
-        "outputId": "1580306a-d57c-4793-b65c-19e163e9dbf2"
+        "outputId": "b7d8ad4b-a92b-4b09-b1ed-c8a39d578249"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Requirement already satisfied: uproot in /usr/local/lib/python3.7/dist-packages (4.1.9)\n",
+            "Collecting uproot\n",
+            "  Downloading uproot-4.1.9-py2.py3-none-any.whl (301 kB)\n",
+            "\u001b[?25l\r\u001b[K     |█                               | 10 kB 25.3 MB/s eta 0:00:01\r\u001b[K     |██▏                             | 20 kB 12.8 MB/s eta 0:00:01\r\u001b[K     |███▎                            | 30 kB 9.5 MB/s eta 0:00:01\r\u001b[K     |████▍                           | 40 kB 8.6 MB/s eta 0:00:01\r\u001b[K     |█████▍                          | 51 kB 5.0 MB/s eta 0:00:01\r\u001b[K     |██████▌                         | 61 kB 5.2 MB/s eta 0:00:01\r\u001b[K     |███████▋                        | 71 kB 5.3 MB/s eta 0:00:01\r\u001b[K     |████████▊                       | 81 kB 5.9 MB/s eta 0:00:01\r\u001b[K     |█████████▉                      | 92 kB 4.7 MB/s eta 0:00:01\r\u001b[K     |██████████▉                     | 102 kB 5.1 MB/s eta 0:00:01\r\u001b[K     |████████████                    | 112 kB 5.1 MB/s eta 0:00:01\r\u001b[K     |█████████████                   | 122 kB 5.1 MB/s eta 0:00:01\r\u001b[K     |██████████████▏                 | 133 kB 5.1 MB/s eta 0:00:01\r\u001b[K     |███████████████▏                | 143 kB 5.1 MB/s eta 0:00:01\r\u001b[K     |████████████████▎               | 153 kB 5.1 MB/s eta 0:00:01\r\u001b[K     |█████████████████▍              | 163 kB 5.1 MB/s eta 0:00:01\r\u001b[K     |██████████████████▌             | 174 kB 5.1 MB/s eta 0:00:01\r\u001b[K     |███████████████████▋            | 184 kB 5.1 MB/s eta 0:00:01\r\u001b[K     |████████████████████▋           | 194 kB 5.1 MB/s eta 0:00:01\r\u001b[K     |█████████████████████▊          | 204 kB 5.1 MB/s eta 0:00:01\r\u001b[K     |██████████████████████▉         | 215 kB 5.1 MB/s eta 0:00:01\r\u001b[K     |████████████████████████        | 225 kB 5.1 MB/s eta 0:00:01\r\u001b[K     |█████████████████████████       | 235 kB 5.1 MB/s eta 0:00:01\r\u001b[K     |██████████████████████████      | 245 kB 5.1 MB/s eta 0:00:01\r\u001b[K     |███████████████████████████▏    | 256 kB 5.1 MB/s eta 0:00:01\r\u001b[K     |████████████████████████████▎   | 266 kB 5.1 MB/s eta 0:00:01\r\u001b[K     |█████████████████████████████▍  | 276 kB 5.1 MB/s eta 0:00:01\r\u001b[K     |██████████████████████████████▍ | 286 kB 5.1 MB/s eta 0:00:01\r\u001b[K     |███████████████████████████████▌| 296 kB 5.1 MB/s eta 0:00:01\r\u001b[K     |████████████████████████████████| 301 kB 5.1 MB/s \n",
+            "\u001b[?25hRequirement already satisfied: numpy in /usr/local/lib/python3.7/dist-packages (from uproot) (1.19.5)\n",
             "Requirement already satisfied: setuptools in /usr/local/lib/python3.7/dist-packages (from uproot) (57.4.0)\n",
-            "Requirement already satisfied: numpy in /usr/local/lib/python3.7/dist-packages (from uproot) (1.19.5)\n",
-            "Requirement already satisfied: vector in /usr/local/lib/python3.7/dist-packages (0.8.4)\n",
+            "Installing collected packages: uproot\n",
+            "Successfully installed uproot-4.1.9\n",
+            "Collecting vector\n",
+            "  Downloading vector-0.8.4-py3-none-any.whl (155 kB)\n",
+            "\u001b[K     |████████████████████████████████| 155 kB 5.1 MB/s \n",
+            "\u001b[?25hRequirement already satisfied: importlib-metadata>=0.22 in /usr/local/lib/python3.7/dist-packages (from vector) (4.10.0)\n",
             "Requirement already satisfied: typing-extensions in /usr/local/lib/python3.7/dist-packages (from vector) (3.10.0.2)\n",
-            "Requirement already satisfied: importlib-metadata>=0.22 in /usr/local/lib/python3.7/dist-packages (from vector) (4.10.0)\n",
-            "Requirement already satisfied: packaging>=19.0 in /usr/local/lib/python3.7/dist-packages (from vector) (21.3)\n",
             "Requirement already satisfied: numpy>=1.13.3 in /usr/local/lib/python3.7/dist-packages (from vector) (1.19.5)\n",
+            "Requirement already satisfied: packaging>=19.0 in /usr/local/lib/python3.7/dist-packages (from vector) (21.3)\n",
             "Requirement already satisfied: zipp>=0.5 in /usr/local/lib/python3.7/dist-packages (from importlib-metadata>=0.22->vector) (3.7.0)\n",
-            "Requirement already satisfied: pyparsing!=3.0.5,>=2.0.2 in /usr/local/lib/python3.7/dist-packages (from packaging>=19.0->vector) (3.0.6)\n"
+            "Requirement already satisfied: pyparsing!=3.0.5,>=2.0.2 in /usr/local/lib/python3.7/dist-packages (from packaging>=19.0->vector) (3.0.6)\n",
+            "Installing collected packages: vector\n",
+            "Successfully installed vector-0.8.4\n"
           ]
         }
       ],
@@ -90,7 +97,7 @@
       "metadata": {
         "id": "6P_RGNqhPWel"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -109,9 +116,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fAxK2rtTPc6b",
-        "outputId": "5de0382a-a60e-4d20-dfdc-0036772046d7"
+        "outputId": "f5b1310c-933b-4866-a825-c01ef811edf7"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -124,11 +131,11 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<TTree 'DecayTree' (136 branches) at 0x7f4df0fb1190>"
+              "<TTree 'DecayTree' (136 branches) at 0x7f6aee083dd0>"
             ]
           },
           "metadata": {},
-          "execution_count": 328
+          "execution_count": 5
         }
       ]
     },
@@ -141,7 +148,7 @@
       "metadata": {
         "id": "HEyQwJ9ZPkSy"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -155,9 +162,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WxNHO0OWPq1E",
-        "outputId": "9ed95a57-7b2b-49df-fcb7-48925fabb386"
+        "outputId": "da809e34-ded0-4954-c2fd-709be1e4fbfa"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -167,7 +174,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 330
+          "execution_count": 7
         }
       ]
     },
@@ -270,7 +277,7 @@
       "metadata": {
         "id": "ltycP1BLP4dC"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -283,7 +290,7 @@
       "metadata": {
         "id": "u1XxfBWERld2"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -298,9 +305,9 @@
           "height": 265
         },
         "id": "jJHh6qLLR2NZ",
-        "outputId": "98ce5d8c-3b17-454c-d445-40cde7bcfc1c"
+        "outputId": "f5466812-67c6-4683-c765-9d2d67a5248e"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "display_data",
@@ -408,7 +415,7 @@
       "metadata": {
         "id": "irjpdU1dR6EH"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -421,7 +428,7 @@
       "metadata": {
         "id": "Lwkd9E6YSXhA"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -436,9 +443,9 @@
           "height": 267
         },
         "id": "EsRsHqncSb97",
-        "outputId": "c5d7fe3b-fb66-43b0-fed2-da4968c2d82d"
+        "outputId": "ec2b3262-7e91-48d8-c222-8a06570402ba"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "display_data",
@@ -564,7 +571,7 @@
       "metadata": {
         "id": "YTR2rn0USfZD"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -576,7 +583,7 @@
       "metadata": {
         "id": "s7cbAOzkYLde"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -591,9 +598,9 @@
           "height": 265
         },
         "id": "KGfErHrZYRHR",
-        "outputId": "97e03e49-e678-4990-e9e8-855b446c8a0d"
+        "outputId": "5a5b7810-3778-430a-aedc-0e21fa964fe1"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "display_data",
@@ -664,7 +671,7 @@
       "metadata": {
         "id": "f8BEarhSYUzY"
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -676,7 +683,7 @@
       "metadata": {
         "id": "rRc-menpYmwR"
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -691,9 +698,9 @@
           "height": 265
         },
         "id": "hYMlM3kuYr_F",
-        "outputId": "71b5bcdf-145d-4120-e3a8-14bf4a0efdf6"
+        "outputId": "75101dde-ac68-4f53-e02a-7f9a4ecae7b1"
       },
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "display_data",
@@ -743,7 +750,7 @@
       "metadata": {
         "id": "94fgw6cvYu6i"
       },
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -760,9 +767,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QyyTGZ6ZZsQ1",
-        "outputId": "b5afca1c-64b4-4b69-b682-bcfe5aaf8494"
+        "outputId": "1fe51eea-e246-4275-c34b-e73fce0f7824"
       },
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
@@ -812,7 +819,7 @@
       "metadata": {
         "id": "macXLGNBl5rU"
       },
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -890,7 +897,7 @@
       "metadata": {
         "id": "M8XhzbGOocqU"
       },
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -902,7 +909,7 @@
       "metadata": {
         "id": "dPuWooBTqsSE"
       },
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -914,7 +921,7 @@
       "metadata": {
         "id": "SK-FHhjiqytD"
       },
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -939,7 +946,7 @@
       "metadata": {
         "id": "lIw6xWJUq1vf"
       },
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -959,7 +966,7 @@
       "metadata": {
         "id": "5RR_jt9csT0w"
       },
-      "execution_count": null,
+      "execution_count": 27,
       "outputs": []
     },
     {
@@ -982,7 +989,7 @@
       "metadata": {
         "id": "Kvnz1aazuCSB"
       },
-      "execution_count": null,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -1002,9 +1009,9 @@
           "height": 482
         },
         "id": "zjkNsir3ug2B",
-        "outputId": "cbf40c43-076c-46a2-c18f-0cdae5506212"
+        "outputId": "9fc421e6-074c-4d48-efc6-d4745d1331e9"
       },
-      "execution_count": null,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1039,7 +1046,7 @@
       "metadata": {
         "id": "F20RnN-uwDIp"
       },
-      "execution_count": null,
+      "execution_count": 30,
       "outputs": []
     },
     {
@@ -1054,9 +1061,9 @@
           "height": 265
         },
         "id": "hBTGShDLwLWw",
-        "outputId": "5462245e-0cad-4a95-fcce-ce78ed58de62"
+        "outputId": "0de1e1ea-015c-42e4-df2b-6748a467532f"
       },
-      "execution_count": null,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1090,7 +1097,7 @@
       "metadata": {
         "id": "m9ascM6HwPvf"
       },
-      "execution_count": null,
+      "execution_count": 32,
       "outputs": []
     },
     {
@@ -1110,9 +1117,9 @@
           "height": 479
         },
         "id": "Z4BocCShwnKa",
-        "outputId": "88ccef59-671d-43e3-e094-081469793a0f"
+        "outputId": "071140f3-b470-4748-f4c6-94ff75e38de6"
       },
-      "execution_count": null,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1136,7 +1143,7 @@
       "metadata": {
         "id": "R-h7feA8w85N"
       },
-      "execution_count": null,
+      "execution_count": 34,
       "outputs": []
     },
     {
@@ -1151,9 +1158,9 @@
           "height": 265
         },
         "id": "H0i3A-QJxDMY",
-        "outputId": "fdda5fe2-9af0-4755-c4b6-91ca4e498d65"
+        "outputId": "cce21f6b-facf-4cff-a4f3-2f0c3f2cfdd2"
       },
-      "execution_count": null,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1177,7 +1184,7 @@
       "metadata": {
         "id": "VpNp5Z8iwryx"
       },
-      "execution_count": null,
+      "execution_count": 36,
       "outputs": []
     },
     {
@@ -1197,9 +1204,9 @@
           "height": 479
         },
         "id": "SrfRk81WwzP2",
-        "outputId": "c95a60ed-8adf-4b5d-d170-3d29c09d6ae8"
+        "outputId": "7f78ada3-24b6-47b9-cdee-f9212b16becc"
       },
-      "execution_count": null,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1223,7 +1230,7 @@
       "metadata": {
         "id": "-6AY1-0vw4jg"
       },
-      "execution_count": null,
+      "execution_count": 38,
       "outputs": []
     },
     {
@@ -1238,9 +1245,9 @@
           "height": 265
         },
         "id": "l3VDb6sxxMYz",
-        "outputId": "708cc35b-f4f6-4f06-9fba-381fd8f457f9"
+        "outputId": "42a461b8-5c48-44b2-c2b4-8733910343e3"
       },
-      "execution_count": null,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1264,7 +1271,7 @@
       "metadata": {
         "id": "ONP0In1Tyikg"
       },
-      "execution_count": null,
+      "execution_count": 40,
       "outputs": []
     },
     {
@@ -1284,9 +1291,9 @@
           "height": 485
         },
         "id": "tpasocy0yleQ",
-        "outputId": "687a4c50-31d3-40c7-f071-c6a376c4c45a"
+        "outputId": "f8a2eca0-04ab-4e4a-c5ab-4a6c766d53f2"
       },
-      "execution_count": null,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1310,7 +1317,7 @@
       "metadata": {
         "id": "03xuLaLU2mcp"
       },
-      "execution_count": null,
+      "execution_count": 42,
       "outputs": []
     },
     {
@@ -1325,9 +1332,9 @@
           "height": 265
         },
         "id": "ZXRm6e8w3LQU",
-        "outputId": "8af0ee91-ac24-4126-b555-28b9a2109d6e"
+        "outputId": "ab7cd113-d476-495f-e7ff-fcf80d8abd76"
       },
-      "execution_count": null,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1353,6 +1360,46 @@
       "metadata": {
         "id": "awt0smhB3Xv5"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Save our ROOT file with the new variables for use in further analysis\n",
+        "\n",
+        "#Make a new file in our Google Drive, with the same name as our input file but with _Vars added to the end\n",
+        "out_file_path = f\"{file_path}_Vars\"\n",
+        "outfile = uproot.recreate(f\"{out_file_path}.root\")"
+      ],
+      "metadata": {
+        "id": "GtmAmbeJPrTh"
+      },
+      "execution_count": 44,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Add our DataFrame to the file as a TTree with the same name as our input file TTree name\n",
+        "#This might take a little while to run as our DataFrame is quite big\n",
+        "outfile[tree_name] = df"
+      ],
+      "metadata": {
+        "id": "HTEfqy2JP6B2"
+      },
+      "execution_count": 45,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Close the file to finalise things\n",
+        "outfile.close()"
+      ],
+      "metadata": {
+        "id": "6rKJSoAkP8GD"
+      },
+      "execution_count": 46,
+      "outputs": []
     }
   ]
 }
