--- a/Bc2JpsiMuNu_RapidSim_LHCb_templates.ipynb
+++ b/Bc2JpsiMuNu_RapidSim_LHCb_templates.ipynb
@@ -6,7 +6,7 @@
       "name": "Bc2JpsiMuNu_RapidSim_LHCb_templates.ipynb",
       "provenance": [],
       "mount_file_id": "1XHxXpD9is4Pdg2DigBL0kWMwautfxQCV",
-      "authorship_tag": "ABX9TyNK3YL9SdmXhpgUxnskhpub",
+      "authorship_tag": "ABX9TyP3/njF8d2hnL97R5EpHx0l",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -977,12 +977,12 @@
         "hist_path = \"/content/drive/MyDrive/Bc2JpsiMuNu_Analysis/pickle\"\n",
         "for h in all_h_norm:  \n",
         "  with open(f\"{hist_path}/hist_{h}.pkl\", \"wb\") as f:\n",
-        "    pickle.dump(h, f)"
+        "    pickle.dump(all_h_norm[h], f)"
       ],
       "metadata": {
         "id": "yjLvXjRZQYJn"
       },
-      "execution_count": 44,
+      "execution_count": 45,
       "outputs": []
     },
     {
