--- a/Bc2JpsiMuNu_RapidSim_LHCb_templates.ipynb
+++ b/Bc2JpsiMuNu_RapidSim_LHCb_templates.ipynb
@@ -6,7 +6,7 @@
       "name": "Bc2JpsiMuNu_RapidSim_LHCb_templates.ipynb",
       "provenance": [],
       "mount_file_id": "1XHxXpD9is4Pdg2DigBL0kWMwautfxQCV",
-      "authorship_tag": "ABX9TyP3/njF8d2hnL97R5EpHx0l",
+      "authorship_tag": "ABX9TyMNB2ojRB9N/82Eda3xDMkN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,7 +41,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -215,12 +215,13 @@
         "from hist import Hist\n",
         "import mplhep\n",
         "import pandas as pd\n",
-        "import pickle"
+        "import pickle\n",
+        "import json"
       ],
       "metadata": {
         "id": "iGx57U6s6O35"
       },
-      "execution_count": 43,
+      "execution_count": 47,
       "outputs": []
     },
     {
@@ -241,7 +242,7 @@
         "id": "FminCtmu7SS5",
         "outputId": "37e590b8-48b6-40ae-e7b5-806b01581d80"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -271,7 +272,7 @@
       "metadata": {
         "id": "aY8SR7-W8Abh"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -299,7 +300,7 @@
         "id": "TJOzyKTs8KC-",
         "outputId": "4b55c3d6-d7fb-4d16-e7c5-d786a90df384"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -362,7 +363,7 @@
         "id": "SDp3CcUF8eXv",
         "outputId": "c2e59f7c-39eb-4e6b-9aec-394a613c36ee"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -410,7 +411,7 @@
       "metadata": {
         "id": "SJ8Q4RND8j4O"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -426,7 +427,7 @@
         "id": "L1LTObYk9LsQ",
         "outputId": "1467f93a-bc01-4673-fa5e-5b2dd8c14fac"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -480,7 +481,7 @@
         "id": "Ns9Low6j9eSw",
         "outputId": "ae5d6962-0194-41a1-b2c6-fb82e596fcab"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -531,7 +532,7 @@
       "metadata": {
         "id": "IImZldZ29kbM"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -547,7 +548,7 @@
         "id": "2QNxu76M-WPb",
         "outputId": "f7a52dfa-cba8-4119-e898-b990bc08b97f"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -619,7 +620,7 @@
       "metadata": {
         "id": "Pc1pdY3L-f8e"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -634,7 +635,7 @@
         "id": "kjkVLH6e_YP_",
         "outputId": "8e908ac5-6e44-4454-d25e-7e5686d65ba0"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -702,7 +703,7 @@
         "id": "21R3c5eS_Zwd",
         "outputId": "6d846e70-67ff-4bdf-84f4-9cd64a6b569d"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -761,7 +762,7 @@
       "metadata": {
         "id": "5pTisi3G_xOM"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -802,22 +803,26 @@
       "metadata": {
         "id": "SXXKdhgRAbC-"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "binnings = get_binning(df)"
+        "binnings = get_binning(df)\n",
+        "#Save to JSON for use in future analyses\n",
+        "json_path = \"/content/drive/MyDrive/Bc2JpsiMuNu_Analysis/json\"\n",
+        "with open(f\"{json_path}/binnings.json\", \"w\") as fp:\n",
+        "    json.dump(binnings, fp)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Za7ZlRY6JsFL",
-        "outputId": "a0f5703c-d729-48f4-9093-36d1fd1a31ba"
+        "outputId": "7a5db508-ea95-491b-f048-f495a9e3405b"
       },
-      "execution_count": 34,
+      "execution_count": 48,
       "outputs": [
         {
           "output_type": "stream",
@@ -842,7 +847,7 @@
         "id": "aTN3ERx6JvY2",
         "outputId": "5e41e452-3e7f-4c96-cff3-1431ede3fd0f"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -919,7 +924,7 @@
       "metadata": {
         "id": "YSwnXH7PKQFU"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -951,7 +956,7 @@
         "id": "bGOVExjHKrYt",
         "outputId": "a1e0063d-1402-468d-e94a-f0ff819eda38"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -982,7 +987,7 @@
       "metadata": {
         "id": "yjLvXjRZQYJn"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": []
     },
     {
