--- a/Bc2JpsiMuNu_RapidSim_LHCb_template_weights.ipynb
+++ b/Bc2JpsiMuNu_RapidSim_LHCb_template_weights.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "143ufUOkwwq7IMFdf1mcSmct5qgFODXAB",
-      "authorship_tag": "ABX9TyPXLpZKph6RnGPhC2IZ6V5p",
+      "authorship_tag": "ABX9TyOswYAIVgAP1psMQ8W06snf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -52,7 +52,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HRHO9kgV0DTu",
-        "outputId": "65dffca6-86b1-4c8a-a449-efff11e430c6"
+        "outputId": "8492376c-125e-4f53-dd8c-37edcfa4e40c"
       },
       "execution_count": 1,
       "outputs": [
@@ -62,9 +62,9 @@
           "text": [
             "Collecting uproot\n",
             "  Downloading uproot-4.1.9-py2.py3-none-any.whl (301 kB)\n",
-            "\u001b[?25l\r\u001b[K     |█                               | 10 kB 16.2 MB/s eta 0:00:01\r\u001b[K     |██▏                             | 20 kB 19.6 MB/s eta 0:00:01\r\u001b[K     |███▎                            | 30 kB 8.7 MB/s eta 0:00:01\r\u001b[K     |████▍                           | 40 kB 7.0 MB/s eta 0:00:01\r\u001b[K     |█████▍                          | 51 kB 8.2 MB/s eta 0:00:01\r\u001b[K     |██████▌                         | 61 kB 9.6 MB/s eta 0:00:01\r\u001b[K     |███████▋                        | 71 kB 5.5 MB/s eta 0:00:01\r\u001b[K     |████████▊                       | 81 kB 6.1 MB/s eta 0:00:01\r\u001b[K     |█████████▉                      | 92 kB 6.6 MB/s eta 0:00:01\r\u001b[K     |██████████▉                     | 102 kB 7.1 MB/s eta 0:00:01\r\u001b[K     |████████████                    | 112 kB 7.1 MB/s eta 0:00:01\r\u001b[K     |█████████████                   | 122 kB 7.1 MB/s eta 0:00:01\r\u001b[K     |██████████████▏                 | 133 kB 7.1 MB/s eta 0:00:01\r\u001b[K     |███████████████▏                | 143 kB 7.1 MB/s eta 0:00:01\r\u001b[K     |████████████████▎               | 153 kB 7.1 MB/s eta 0:00:01\r\u001b[K     |█████████████████▍              | 163 kB 7.1 MB/s eta 0:00:01\r\u001b[K     |██████████████████▌             | 174 kB 7.1 MB/s eta 0:00:01\r\u001b[K     |███████████████████▋            | 184 kB 7.1 MB/s eta 0:00:01\r\u001b[K     |████████████████████▋           | 194 kB 7.1 MB/s eta 0:00:01\r\u001b[K     |█████████████████████▊          | 204 kB 7.1 MB/s eta 0:00:01\r\u001b[K     |██████████████████████▉         | 215 kB 7.1 MB/s eta 0:00:01\r\u001b[K     |████████████████████████        | 225 kB 7.1 MB/s eta 0:00:01\r\u001b[K     |█████████████████████████       | 235 kB 7.1 MB/s eta 0:00:01\r\u001b[K     |██████████████████████████      | 245 kB 7.1 MB/s eta 0:00:01\r\u001b[K     |███████████████████████████▏    | 256 kB 7.1 MB/s eta 0:00:01\r\u001b[K     |████████████████████████████▎   | 266 kB 7.1 MB/s eta 0:00:01\r\u001b[K     |█████████████████████████████▍  | 276 kB 7.1 MB/s eta 0:00:01\r\u001b[K     |██████████████████████████████▍ | 286 kB 7.1 MB/s eta 0:00:01\r\u001b[K     |███████████████████████████████▌| 296 kB 7.1 MB/s eta 0:00:01\r\u001b[K     |████████████████████████████████| 301 kB 7.1 MB/s \n",
-            "\u001b[?25hRequirement already satisfied: setuptools in /usr/local/lib/python3.7/dist-packages (from uproot) (57.4.0)\n",
-            "Requirement already satisfied: numpy in /usr/local/lib/python3.7/dist-packages (from uproot) (1.19.5)\n",
+            "\u001b[?25l\r\u001b[K     |█                               | 10 kB 18.5 MB/s eta 0:00:01\r\u001b[K     |██▏                             | 20 kB 12.6 MB/s eta 0:00:01\r\u001b[K     |███▎                            | 30 kB 9.7 MB/s eta 0:00:01\r\u001b[K     |████▍                           | 40 kB 8.5 MB/s eta 0:00:01\r\u001b[K     |█████▍                          | 51 kB 5.3 MB/s eta 0:00:01\r\u001b[K     |██████▌                         | 61 kB 5.8 MB/s eta 0:00:01\r\u001b[K     |███████▋                        | 71 kB 5.7 MB/s eta 0:00:01\r\u001b[K     |████████▊                       | 81 kB 6.4 MB/s eta 0:00:01\r\u001b[K     |█████████▉                      | 92 kB 4.9 MB/s eta 0:00:01\r\u001b[K     |██████████▉                     | 102 kB 5.4 MB/s eta 0:00:01\r\u001b[K     |████████████                    | 112 kB 5.4 MB/s eta 0:00:01\r\u001b[K     |█████████████                   | 122 kB 5.4 MB/s eta 0:00:01\r\u001b[K     |██████████████▏                 | 133 kB 5.4 MB/s eta 0:00:01\r\u001b[K     |███████████████▏                | 143 kB 5.4 MB/s eta 0:00:01\r\u001b[K     |████████████████▎               | 153 kB 5.4 MB/s eta 0:00:01\r\u001b[K     |█████████████████▍              | 163 kB 5.4 MB/s eta 0:00:01\r\u001b[K     |██████████████████▌             | 174 kB 5.4 MB/s eta 0:00:01\r\u001b[K     |███████████████████▋            | 184 kB 5.4 MB/s eta 0:00:01\r\u001b[K     |████████████████████▋           | 194 kB 5.4 MB/s eta 0:00:01\r\u001b[K     |█████████████████████▊          | 204 kB 5.4 MB/s eta 0:00:01\r\u001b[K     |██████████████████████▉         | 215 kB 5.4 MB/s eta 0:00:01\r\u001b[K     |████████████████████████        | 225 kB 5.4 MB/s eta 0:00:01\r\u001b[K     |█████████████████████████       | 235 kB 5.4 MB/s eta 0:00:01\r\u001b[K     |██████████████████████████      | 245 kB 5.4 MB/s eta 0:00:01\r\u001b[K     |███████████████████████████▏    | 256 kB 5.4 MB/s eta 0:00:01\r\u001b[K     |████████████████████████████▎   | 266 kB 5.4 MB/s eta 0:00:01\r\u001b[K     |█████████████████████████████▍  | 276 kB 5.4 MB/s eta 0:00:01\r\u001b[K     |██████████████████████████████▍ | 286 kB 5.4 MB/s eta 0:00:01\r\u001b[K     |███████████████████████████████▌| 296 kB 5.4 MB/s eta 0:00:01\r\u001b[K     |████████████████████████████████| 301 kB 5.4 MB/s \n",
+            "\u001b[?25hRequirement already satisfied: numpy in /usr/local/lib/python3.7/dist-packages (from uproot) (1.19.5)\n",
+            "Requirement already satisfied: setuptools in /usr/local/lib/python3.7/dist-packages (from uproot) (57.4.0)\n",
             "Installing collected packages: uproot\n",
             "Successfully installed uproot-4.1.9\n"
           ]
@@ -112,7 +112,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5cTFCSIIwPTM",
-        "outputId": "4eb66020-9f0f-47db-a1b4-684f59bb53b2"
+        "outputId": "3bf3ee07-3a29-41ce-f5e3-4ed6b55d1190"
       },
       "execution_count": 3,
       "outputs": [
@@ -208,7 +208,7 @@
         "  terms[\"1\"] = (1 - costheta_W)**2 * (1 + costheta_Jpsi**2)\n",
         "  terms[\"2\"] = (1 + costheta_W)**2 * (1 + costheta_Jpsi**2)\n",
         "  terms[\"3\"] = sintheta_W * sintheta_Jpsi2 * coschi * (1 - costheta_W)\n",
-        "  terms[\"4\"] = -sintheta_W * sintheta_Jpsi2 * coschi * (1 + costheta_W)\n",
+        "  terms[\"4\"] = sintheta_W * sintheta_Jpsi2 * coschi * (1 + costheta_W)\n",
         "  terms[\"5\"] = sintheta_W**2 * sintheta_Jpsi**2 * cos2chi\n",
         "\n",
         "  #Total model\n",
@@ -218,7 +218,7 @@
         "    f += Hp_amp**2 * 0.5 * terms[\"1\"]\n",
         "    f += Hm_amp**2 * 0.5 * terms[\"2\"]\n",
         "    f += hph0st.real * terms[\"3\"]\n",
-        "    f += hmh0st.real * terms[\"4\"]\n",
+        "    f += -hmh0st.real * terms[\"4\"]\n",
         "    f += hphmst.real * terms[\"5\"]\n",
         "  \n",
         "    return f\n",
@@ -258,7 +258,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gI1_h99XzlcO",
-        "outputId": "802fb9df-9226-4b2c-9a05-8249d9f75c18"
+        "outputId": "5b87030d-dd6f-4dcf-e62a-510fc87ae69f"
       },
       "execution_count": 5,
       "outputs": [
@@ -273,7 +273,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<TTree 'DecayTree' (159 branches) at 0x7ff16c1b3090>"
+              "<TTree 'DecayTree' (159 branches) at 0x7f2fc922d190>"
             ]
           },
           "metadata": {},
@@ -288,10 +288,23 @@
         "df = events.arrays(library=\"pd\")"
       ],
       "metadata": {
-        "id": "UlSkbLgU0LBj"
+        "id": "UlSkbLgU0LBj",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "432bfccf-89da-410c-e3d6-dae73e78fb0d"
       },
       "execution_count": 6,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.7/dist-packages/uproot/interpretation/library.py:806: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead.  To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+            "  out[name] = series[name]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -308,10 +321,23 @@
         "df[\"true_model\"] = calc_true_model(true_pars, df[\"costheta_Jpsi_true\"], df[\"costheta_W_true\"], df[\"chi_true\"])"
       ],
       "metadata": {
-        "id": "8xvEqaNr0M83"
+        "id": "8xvEqaNr0M83",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e38a931b-c589-4ebc-8d60-a62c8f53a0e2"
       },
       "execution_count": 7,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:1: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead.  To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+            "  \"\"\"Entry point for launching an IPython kernel.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -325,7 +351,7 @@
           "height": 265
         },
         "id": "N-Hx8iXP0ofB",
-        "outputId": "b0313011-ecde-40ce-f581-f8dc25a6eff3"
+        "outputId": "8b5df931-145b-49cc-8d72-eef5b0590cff"
       },
       "execution_count": 8,
       "outputs": [
@@ -361,10 +387,23 @@
         "  df[f\"single_term_{i}\"] = calc_true_model(true_pars, df[\"costheta_Jpsi_true\"], df[\"costheta_W_true\"], df[\"chi_true\"], single_term=i)"
       ],
       "metadata": {
-        "id": "7CvxN3C70rSx"
+        "id": "7CvxN3C70rSx",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c5e7e105-816b-47df-ece1-0329c7f4e852"
       },
       "execution_count": 9,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:2: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead.  To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+            "  \n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -378,7 +417,7 @@
           "height": 265
         },
         "id": "fOLsMoYs36l7",
-        "outputId": "02c53c3e-475b-4a1b-e575-01c7e319747c"
+        "outputId": "34a38b37-c958-47c5-fa62-a263d28d4ea9"
       },
       "execution_count": 10,
       "outputs": [
@@ -412,10 +451,23 @@
         "  df[f\"weight_{i}\"] = df[f\"single_term_{i}\"] / df[\"true_model\"]"
       ],
       "metadata": {
-        "id": "s88CaoBV4CHH"
+        "id": "s88CaoBV4CHH",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "bbfa0e77-eb71-499c-879a-0f2803b0ed25"
       },
       "execution_count": 11,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:2: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead.  To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+            "  \n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -429,7 +481,7 @@
           "height": 265
         },
         "id": "oC6LySkG4bnR",
-        "outputId": "28f957f9-7e54-40c2-d78b-23452b8da3c9"
+        "outputId": "67aff7aa-fca8-47ac-a56e-a119dd2f4587"
       },
       "execution_count": 12,
       "outputs": [
@@ -468,7 +520,7 @@
           "height": 265
         },
         "id": "G-t_LrDg4fEp",
-        "outputId": "838368fb-36c1-48d3-b898-6d1f3b9b3081"
+        "outputId": "3f68d08c-5d74-4c09-b626-e19a6ede6fb8"
       },
       "execution_count": 13,
       "outputs": [
@@ -507,7 +559,7 @@
           "height": 265
         },
         "id": "OQNgzzlp4zd_",
-        "outputId": "c3f891b0-35d5-4686-d3dc-83a6a2cd4d1b"
+        "outputId": "2a707952-0fea-487f-dd2b-18c1a298f7fe"
       },
       "execution_count": 14,
       "outputs": [
@@ -552,7 +604,7 @@
           "height": 265
         },
         "id": "4Ke1_8No5R4C",
-        "outputId": "4cc301b6-7b8f-41fb-cbb6-a291caa5bb66"
+        "outputId": "53078ab8-3be4-4cd6-8596-cd25ff3fb068"
       },
       "execution_count": 15,
       "outputs": [
@@ -599,7 +651,7 @@
           "height": 269
         },
         "id": "muCcOdHKPQtJ",
-        "outputId": "d8133147-90f1-45dc-f326-a4a3b758d92b"
+        "outputId": "44e25b14-b894-478b-ef7f-8d02f6217c99"
       },
       "execution_count": 16,
       "outputs": [
